# Patchwright

./: .gitattributes  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/patchwright-cli/: Cargo.toml
crates/patchwright-cli/src/: args.rs  design_render.rs  git_ops.rs  implementation_plan.rs  language_wiring.rs  lib.rs  main.rs  model_wiring.rs  profile_report.rs  render_utils.rs  review.rs  solve_report.rs  tests.rs
crates/patchwright-cli/tests/: verified_patch_fixture.rs
crates/patchwright-config/: Cargo.toml
crates/patchwright-config/src/: lib.rs
crates/patchwright-config/tests/: config.rs
crates/patchwright-core/: Cargo.toml
crates/patchwright-core/src/: action.rs  agent.rs  error.rs  lib.rs  policy.rs  traits.rs  types.rs
crates/patchwright-core/tests/: agent_loop.rs  architecture_design.rs
crates/patchwright-exec-local/: Cargo.toml
crates/patchwright-exec-local/src/: lib.rs
crates/patchwright-exec-local/tests/: local_execution.rs
crates/patchwright-index/: Cargo.toml
crates/patchwright-index/src/: lib.rs
crates/patchwright-index/tests/: architecture_map.rs  basic_index.rs  project_profile.rs
crates/patchwright-lang-rust/: Cargo.toml
crates/patchwright-lang-rust/src/: lib.rs
crates/patchwright-lang-rust/tests/: rust_adapter.rs
crates/patchwright-model-codex-cli/: Cargo.toml
crates/patchwright-model-codex-cli/src/: lib.rs
crates/patchwright-model-codex-cli/tests/: codex_cli.rs
crates/patchwright-model-contract/: Cargo.toml
crates/patchwright-model-contract/src/: lib.rs
crates/patchwright-model-contract/tests/: contract.rs
crates/patchwright-model-openai/: Cargo.toml
crates/patchwright-model-openai/src/: lib.rs
crates/patchwright-model-openai/tests/: openai_client.rs
crates/patchwright-test-support/: Cargo.toml
crates/patchwright-test-support/src/: lib.rs
crates/patchwright-verify/: Cargo.toml
crates/patchwright-verify/src/: lib.rs
crates/patchwright-verify/tests/: verifier.rs
docs/superpowers/plans/: 2026-04-29-model-provider-contract.md  2026-04-29-patchwright-foundation.md  2026-04-29-patchwright-v0-1-real-agent.md
docs/superpowers/specs/: 2026-04-29-model-provider-contract-design.md  2026-04-29-patchwright-architecture-design.md
fixtures/rust/add_wrong_operator/: Cargo.toml  TASK.md
fixtures/rust/add_wrong_operator/src/: lib.rs
scripts/: demo-add-wrong-operator.ps1  demo-add-wrong-operator.sh
