[workspace]
members = [
    "crates/patchwright-cli",
    "crates/patchwright-core",
    "crates/patchwright-test-support",
    "crates/patchwright-exec-local",
    "crates/patchwright-index",
    "crates/patchwright-lang-rust",
    "crates/patchwright-verify",
    "crates/patchwright-model-openai",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Erwann9875/Patchwright"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
