[package]
name = "patchwright-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "patchwright"
path = "src/main.rs"

[dependencies]
patchwright-core = { path = "../patchwright-core" }
patchwright-exec-local = { path = "../patchwright-exec-local" }
patchwright-index = { path = "../patchwright-index" }
patchwright-lang-rust = { path = "../patchwright-lang-rust" }
patchwright-model-openai = { path = "../patchwright-model-openai" }
patchwright-verify = { path = "../patchwright-verify" }

[lints]
workspace = true
