[package]
name = "patchwright-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "patchwright"
path = "src/main.rs"

[dependencies]
patchwright-config = { path = "../patchwright-config" }
patchwright-core = { path = "../patchwright-core" }
patchwright-exec-local = { path = "../patchwright-exec-local" }
patchwright-index = { path = "../patchwright-index" }
patchwright-lang-rust = { path = "../patchwright-lang-rust" }
patchwright-model-codex-cli = { path = "../patchwright-model-codex-cli" }
patchwright-model-openai = { path = "../patchwright-model-openai" }
patchwright-verify = { path = "../patchwright-verify" }

[dev-dependencies]
patchwright-test-support = { path = "../patchwright-test-support" }

[lints]
workspace = true
