[package]
name = "patchwright-index"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
patchwright-core = { path = "../patchwright-core" }

[dev-dependencies]
patchwright-test-support = { path = "../patchwright-test-support" }

[lints]
workspace = true
