[package]
name = "patchwright-lang-rust"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
patchwright-core = { path = "../patchwright-core" }

[dev-dependencies]
patchwright-index = { path = "../patchwright-index" }
patchwright-test-support = { path = "../patchwright-test-support" }

[lints]
workspace = true
