[package]
name = "patchwright-model-codex-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
patchwright-core = { path = "../patchwright-core" }
patchwright-model-contract = { path = "../patchwright-model-contract" }

[dev-dependencies]
patchwright-test-support = { path = "../patchwright-test-support" }

[lints]
workspace = true
