[package]
name = "patchwright-model-openai"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
patchwright-core = { path = "../patchwright-core" }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[lints]
workspace = true
